<resources>
    <string name="app_name">Casino</string>
    <string name="player_wait">Please wait</string>
    <string name="loading">Loading</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="wunderino">wunderino</string>
    <string name="text_bwin">bwin</string>
    <string name="text_slottica">slottica</string>
    <string name="text_leovegas">leovegas</string>
    <string name="text_wplay">wplay</string>
    <string name="text_contactus">contact us</string>
    <string name="text_sharetheapp">share the app</string>
</resources>